--- a/index.html
+++ b/index.html
@@ -17,6 +17,9 @@
   <img id="pixel-art" src="img/Nintendo project pixels.png" alt="Pixel Art" />
 
   <div class="message-container" id="thanks-message"></div>
+
+  <div class="template-notice" id="template-notice"></div>
+
   <div class="link-container" id="grief-link"></div>
   <div id="hud-text"></div>
 
